--- a/web.css
+++ b/web.css
@@ -94,9 +94,9 @@ header{
     width: 80%;
 }
 
-.anchor {
+/*.anchor {
     scroll-margin-top: 100px;
-}
+}*/
 
 .header-container{
     display: grid;
@@ -167,8 +167,8 @@ header{
 
 .about-image{
     border-radius: 20px;
-    height: 70%;
-    width: 70%;
+    height: 120%;
+    width: 120%;
 }
 
 .about-container{
