--- a/web.css
+++ b/web.css
@@ -94,9 +94,9 @@ header{
     width: 80%;
 }
 
-.anchor {
+/*.anchor {
     scroll-margin-top: 100px;
-}
+}*/
 
 .header-container{
     display: grid;
@@ -166,9 +166,9 @@ header{
 /* About Section styling starts here */
 
 .about-image{
-    border-radius: 25px;
-    height: 70%;
-    width: 70%;
+    border-radius: 20px;
+    height: 120%;
+    width: 120%;
 }
 
 .about-container{
